--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
+regex==2020.6.8
 retrying==1.3.3
 six==1.15.0
 tornado==6.0.4
 typing-extensions==3.7.4.2
+tzlocal==2.1
 Werkzeug==1.0.1
